Added some sane default limits for Solr so it doesn't chew up all the RAM.
That tends to happen when importing large datasets.